# Intel

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  RAILWAY.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.railway/: README.md  railway.ts
config/: newspapers.yaml
docs/: ARCHITECTURE.md
frontend/: .env.example  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ArticleCard.tsx  ArticleDetail.tsx  PersonCard.tsx  PersonDetail.tsx  SetupBanner.tsx  StatsCards.tsx
frontend/src/hooks/: useData.ts
scripts/: wait_for_db.py
src/: config.py  main.py
src/ai/: name_confidence.py  name_extractor.py  person_names.py  summarizer.py
src/api/: server.py
src/crm/: webhook.py
src/database/: contacts.py  crud.py  models.py  url.py
src/pipeline/: background.py  filters.py  reprocess.py  runner.py  scheduler.py
src/scraper/: __init__.py  base.py  generic.py
